--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="part_photo">
-                    <img class="img-fluid" src="/img/business-man-4226005_960_720.jpg" alt="">
+                    <img class="img-fluid" src="/img/business-man-4226005_960_720.jpg" alt="businessman">
                 </div>
             </div>
 
